# nexus

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
common/crypto/: Cargo.toml  README.md
common/crypto/src/: lib.rs
common/media/: Cargo.toml  README.md
common/media/src/: error.rs  hash.rs  ipfs.rs  lib.rs  types.rs  validation.rs
grouprobot/: .env.example  Cargo.toml  README.md
grouprobot/docs/: API_REFERENCE.md  ARCHITECTURE.md  CHAIN_INTEGRATION.md  PLATFORM_ADAPTERS.md  RULE_ENGINE.md  TEE_SECURITY.md
grouprobot/gramine/: README.md  token-vault.manifest.template
grouprobot/scripts/: extract-mrtd.sh  rolling-upgrade.sh
grouprobot/src/: config.rs  error.rs  main.rs  webhook.rs
grouprobot/src/chain/: client.rs  mod.rs  queries.rs  transactions.rs  types.rs
grouprobot/src/infra/: audience_tracker.rs  group_config.rs  local_store.rs  metrics.rs  mod.rs  rate_limiter.rs
grouprobot/src/platform/: mod.rs
grouprobot/src/platform/discord/: adapter.rs  executor.rs  gateway.rs  mod.rs
grouprobot/src/platform/telegram/: adapter.rs  executor.rs  mod.rs
grouprobot/src/processing/: action.rs  ad_delivery.rs  audit_logger.rs  captcha.rs  custom_commands.rs  mod.rs  normalizer.rs  router.rs  rule_engine.rs
grouprobot/src/processing/automod/: conditions.rs  effects.rs  engine.rs  mod.rs  triggers.rs
grouprobot/src/processing/rules/: ad_footer.rs  antiphishing.rs  approve.rs  automod.rs  blacklist.rs  callback.rs  captcha.rs  cas.rs  classifier.rs  command.rs  custom_filter.rs  default.rs  duplicate.rs  emoji.rs  flood.rs  gban.rs  homoglyph.rs  join.rs  link_limit.rs  lock.rs  log_channel.rs  mention_flood.rs  mod.rs  new_member_audit.rs  nsfw.rs  profanity.rs  raid.rs  similarity.rs  stop_word.rs  text_utils.rs  violation_tracker.rs  warn_tracker.rs
grouprobot/src/tee/: attestor.rs  ceremony.rs  dcap_verify.rs  enclave_bridge.rs  key_manager.rs  mem_security.rs  mod.rs  peer_client.rs  peer_monitor.rs  ra_tls.rs  sealed_storage.rs  shamir.rs  share_recovery.rs  token_vault.rs  vault_client.rs  vault_ipc.rs  vault_server.rs
pallets/ads/core/: Cargo.toml  README.md
pallets/ads/core/src/: benchmarking.rs  lib.rs  mock.rs  runtime_api.rs  tests.rs  weights.rs
pallets/ads/grouprobot/: Cargo.toml  README.md
pallets/ads/grouprobot/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/ads/primitives/: Cargo.toml  README.md
pallets/ads/primitives/src/: lib.rs
pallets/ads/router/: Cargo.toml  README.md
pallets/ads/router/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/dispute/arbitration/: Cargo.toml  README.md
pallets/dispute/arbitration/src/: benchmarking.rs  cleanup.rs  complaint.rs  dispute.rs  lib.rs  mock.rs  runtime_api.rs  state_machine.rs  tests.rs  types.rs  weights.rs
pallets/dispute/escrow/: Cargo.toml  README.md
pallets/dispute/escrow/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/dispute/evidence/: Cargo.toml  README.md
pallets/dispute/evidence/src/: benchmarking.rs  cid_validator.rs  lib.rs  mock.rs  private_content.rs  runtime_api.rs  tests.rs  weights.rs
pallets/entity/commission/: Cargo.toml  README.md  REFERRER_EXEMPT_PLAN.md
pallets/entity/commission/common/: Cargo.toml  README.md  pallet-commission-common-深度分析-2026-03-13.md
pallets/entity/commission/core/: Cargo.toml  DEEP_AUDIT_20260313.md  README.md
pallets/entity/commission/level-diff/: Cargo.toml  README.md
pallets/entity/commission/multi-level/: Cargo.toml  README.md  pallet-commission-multi-level-深度分析.md
pallets/entity/commission/pool-reward/: Cargo.toml  DESIGN-PLAN-A.md  README.md  README.v1.md  README.v2.md  README.v3-multiasset.md
pallets/entity/commission/referral/: Cargo.toml  README.md
pallets/entity/commission/single-line/: Cargo.toml  DEEP_AUDIT_ANALYSIS_2026-03-13.md  README.md
pallets/entity/commission/src/: lib.rs
pallets/entity/commission/team/: Cargo.toml  README.md
pallets/entity/common/: Cargo.toml  DEEP_AUDIT_20260313.md  README.md
pallets/entity/common/src/: errors.rs  lib.rs  pagination.rs  tests.rs
pallets/entity/disclosure/: Cargo.toml  README.md
pallets/entity/disclosure/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/entity/governance/: Cargo.toml  README.md
pallets/entity/governance/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs  weights.rs
pallets/entity/kyc/: Cargo.toml  README.md
pallets/entity/kyc/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/entity/loyalty/: Cargo.toml  DEEP_AUDIT_20260313.md  README.md
pallets/entity/loyalty/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/entity/market/: Cargo.toml  README.md
pallets/entity/market/src/: api_bridge.rs  benchmarking.rs  engine.rs  lib.rs  mock.rs  ocw.rs  oracle.rs  orderbook.rs  risk.rs  runtime_api.rs  tests.rs  weights.rs
pallets/entity/member/: Cargo.toml  README.md
pallets/entity/member/src/: benchmarks.rs  level.rs  lib.rs  mock.rs  referral.rs  registration.rs  runtime_api.rs  tests.rs  upgrade_rule.rs  weights.rs
pallets/entity/order/: Cargo.toml  README.md
pallets/entity/order/src/: benchmarking.rs  dispute.rs  lib.rs  migration.rs  mock.rs  runtime_api.rs  tests.rs  weights.rs
pallets/entity/product/: Cargo.toml  README.md
pallets/entity/product/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/entity/registry/: Cargo.toml  README.md
pallets/entity/registry/src/: admin.rs  benchmarking.rs  governance.rs  helpers.rs  lib.rs  lifecycle.rs  mock.rs  (+5 more)
pallets/entity/review/: Cargo.toml  README.md
pallets/entity/shop/: Cargo.toml  README.md  代付功能分析.md
pallets/entity/token/: Cargo.toml  README.md
pallets/entity/tokensale/: Cargo.toml  README.md
pallets/grouprobot/ads/: Cargo.toml  README.md
pallets/grouprobot/consensus/: Cargo.toml  README.md
pallets/inscription/: Cargo.toml
pallets/inscription/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
(+581 files in other folders)
