[workspace.package]
license = "MIT-0"
authors = ["Nexus Team"]
homepage = "https://nexuschain.network/"
repository = "https://github.com/nexus-blockchain/nexus.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/trading/common",
    "pallets/trading/trc20-verifier",
    "pallets/trading/nex-market",
    "pallets/dispute/escrow",
    "pallets/storage/service",
    "pallets/dispute/evidence",
    "pallets/dispute/arbitration",
    "pallets/storage/lifecycle",
# Entity pallets (原 ShareMall，已重构为子模块)
    "pallets/entity/common",
    "pallets/entity/shop",
    "pallets/entity/registry",
    "pallets/entity/token",
    "pallets/entity/governance",
    "pallets/entity/member",
    "pallets/entity/commission/common",
    "pallets/entity/commission/core",
    "pallets/entity/commission/referral",
    "pallets/entity/commission/multi-level",
    "pallets/entity/commission/level-diff",
    "pallets/entity/commission/single-line",
    "pallets/entity/commission/team",
    "pallets/entity/commission/pool-reward",
    "pallets/entity/commission",
    "pallets/entity/product",
    "pallets/entity/order",
    "pallets/entity/market",
    "pallets/entity/review",
    "pallets/entity/disclosure",
    "pallets/entity/kyc",
    "pallets/entity/tokensale",
    "pallets/entity/loyalty",
# Common libraries (共享工具库，非 pallet)
    "common/crypto",
    "common/media",
    "runtime",
# Ads pallets (通用广告系统)
    "pallets/ads/primitives",
    "pallets/ads/core",
    "pallets/ads/grouprobot",
    "pallets/ads/entity",
    "pallets/ads/router",
# GroupRobot pallets
    "pallets/grouprobot/primitives",
    "pallets/grouprobot/registry",
    "pallets/grouprobot/consensus",
    "pallets/grouprobot/community",
    "pallets/grouprobot/ceremony",
    "pallets/grouprobot/subscription",
    "pallets/grouprobot/rewards",
# Inscription pallet (创世铭文)
    "pallets/inscription",
]
resolver = "2"
exclude = ["grouprobot"]

[workspace.dependencies]
nexus-runtime = { path = "./runtime", default-features = false }
# Trading pallets
pallet-trading-common = { path = "./pallets/trading/common", default-features = false }
pallet-trading-trc20-verifier = { path = "./pallets/trading/trc20-verifier", default-features = false }
pallet-nex-market = { path = "./pallets/trading/nex-market", default-features = false }
# Escrow, Referral, IPFS pallets
pallet-dispute-escrow = { path = "./pallets/dispute/escrow", default-features = false }
pallet-storage-service = { path = "./pallets/storage/service", default-features = false }
# Common libraries (共享工具库，非 pallet)
pallet-crypto-common = { path = "./common/crypto", default-features = false }
media-utils = { path = "./common/media", default-features = false }
# Evidence pallet
pallet-dispute-evidence = { path = "./pallets/dispute/evidence", default-features = false }
# Arbitration pallet
pallet-dispute-arbitration = { path = "./pallets/dispute/arbitration", default-features = false }
# Storage lifecycle pallet
pallet-storage-lifecycle = { path = "./pallets/storage/lifecycle", default-features = false }
# Entity pallets (原 ShareMall，已重构为子模块)
pallet-entity-common = { path = "./pallets/entity/common", default-features = false }
pallet-entity-shop = { path = "./pallets/entity/shop", default-features = false }
pallet-entity-registry = { path = "./pallets/entity/registry", default-features = false }
pallet-entity-token = { path = "./pallets/entity/token", default-features = false }
pallet-entity-governance = { path = "./pallets/entity/governance", default-features = false }
pallet-entity-member = { path = "./pallets/entity/member", default-features = false }
pallet-commission-common = { path = "./pallets/entity/commission/common", default-features = false }
pallet-commission-core = { path = "./pallets/entity/commission/core", default-features = false }
pallet-commission-referral = { path = "./pallets/entity/commission/referral", default-features = false }
pallet-commission-multi-level = { path = "./pallets/entity/commission/multi-level", default-features = false }
pallet-commission-level-diff = { path = "./pallets/entity/commission/level-diff", default-features = false }
pallet-commission-single-line = { path = "./pallets/entity/commission/single-line", default-features = false }
pallet-commission-team = { path = "./pallets/entity/commission/team", default-features = false }
pallet-commission-pool-reward = { path = "./pallets/entity/commission/pool-reward", default-features = false }
pallet-entity-commission = { path = "./pallets/entity/commission", default-features = false }
pallet-entity-product = { path = "./pallets/entity/product", default-features = false }
pallet-entity-order = { path = "./pallets/entity/order", default-features = false }
pallet-entity-market = { path = "./pallets/entity/market", default-features = false }
pallet-entity-review = { path = "./pallets/entity/review", default-features = false }
pallet-entity-disclosure = { path = "./pallets/entity/disclosure", default-features = false }
pallet-entity-kyc = { path = "./pallets/entity/kyc", default-features = false }
pallet-entity-tokensale = { path = "./pallets/entity/tokensale", default-features = false }
pallet-entity-loyalty = { path = "./pallets/entity/loyalty", default-features = false }
# Ads pallets (通用广告系统)
pallet-ads-primitives = { path = "./pallets/ads/primitives", default-features = false }
pallet-ads-core = { path = "./pallets/ads/core", default-features = false }
pallet-ads-grouprobot = { path = "./pallets/ads/grouprobot", default-features = false }
pallet-ads-entity = { path = "./pallets/ads/entity", default-features = false }
pallet-ads-router = { path = "./pallets/ads/router", default-features = false }
# GroupRobot pallets
pallet-grouprobot-primitives = { path = "./pallets/grouprobot/primitives", default-features = false }
pallet-grouprobot-registry = { path = "./pallets/grouprobot/registry", default-features = false }
pallet-grouprobot-consensus = { path = "./pallets/grouprobot/consensus", default-features = false }
pallet-grouprobot-community = { path = "./pallets/grouprobot/community", default-features = false }
pallet-grouprobot-ceremony = { path = "./pallets/grouprobot/ceremony", default-features = false }
pallet-grouprobot-subscription = { path = "./pallets/grouprobot/subscription", default-features = false }
pallet-grouprobot-rewards = { path = "./pallets/grouprobot/rewards", default-features = false }
# Inscription pallet (创世铭文)
pallet-inscription = { path = "./pallets/inscription", default-features = false }
# Additional dependencies
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sp-application-crypto = { version = "44.0.0", default-features = false }
clap = { version = "4.5.13" }
frame-benchmarking-cli = { version = "53.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.13.0", default-features = false }
frame-system = { version = "45.0.0", default-features = false }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
pallet-transaction-payment = { version = "45.0.0", default-features = false }
pallet-assets = { version = "48.1.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "25.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "48.0.0", default-features = false }
sc-basic-authorship = { version = "0.53.0", default-features = false }
sc-cli = { version = "0.57.0", default-features = false }
sc-client-api = { version = "44.0.0", default-features = false }
sc-consensus = { version = "0.54.0", default-features = false }
sc-consensus-aura = { version = "0.55.0", default-features = false }
sc-consensus-grandpa = { version = "0.40.0", default-features = false }
sc-executor = { version = "0.47.0", default-features = false }
sc-network = { version = "0.55.0", default-features = false }
sc-offchain = { version = "50.0.0", default-features = false }
sc-service = { version = "0.56.0", default-features = false }
sc-telemetry = { version = "30.0.0", default-features = false }
sc-transaction-pool = { version = "44.0.0", default-features = false }
sc-transaction-pool-api = { version = "43.0.0", default-features = false }
sp-api = { version = "40.0.0", default-features = false }
sp-block-builder = { version = "40.0.0", default-features = false }
sp-blockchain = { version = "43.0.0", default-features = false }
sp-consensus-aura = { version = "0.46.0", default-features = false }
sp-core = { version = "39.0.0", default-features = false }
sp-genesis-builder = { version = "0.21.0", default-features = false }
sp-inherents = { version = "40.0.0", default-features = false }
sp-io = { version = "44.0.0", default-features = false }
sp-keyring = { version = "45.0.0", default-features = false }
sp-runtime = { version = "45.0.0", default-features = false }
sp-arithmetic = { version = "28.0.0", default-features = false }
sp-timestamp = { version = "40.0.0", default-features = false }
substrate-frame-rpc-system = { version = "49.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
frame-benchmarking = { version = "45.0.0", default-features = false }
frame-executive = { version = "45.0.0", default-features = false }
frame-support = { version = "45.0.0", default-features = false }
frame-system-benchmarking = { version = "45.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "40.0.0", default-features = false }
frame-try-runtime = { version = "0.51.0", default-features = false }
pallet-aura = { version = "44.0.0", default-features = false }
pallet-balances = { version = "46.0.0", default-features = false }
pallet-grandpa = { version = "45.0.0", default-features = false }
pallet-session = { version = "45.0.0", default-features = false, features = ["historical"] }
pallet-offences = { version = "44.0.0", default-features = false }
pallet-authorship = { version = "45.0.0", default-features = false }
pallet-sudo = { version = "45.0.0", default-features = false }
pallet-collective = { version = "45.0.0", default-features = false }
pallet-collective-membership = { package = "pallet-membership", version = "45.0.0", default-features = false }
pallet-timestamp = { version = "44.0.0", default-features = false }
pallet-contracts = { version = "45.0.1", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "45.0.0", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
sp-consensus-grandpa = { version = "27.0.0", default-features = false }
sp-offchain = { version = "40.0.0", default-features = false }
sp-session = { version = "42.0.0", default-features = false }
sp-staking = { version = "42.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-transaction-pool = { version = "40.0.0", default-features = false }
sp-version = { version = "43.0.0", default-features = false }
substrate-wasm-builder = { version = "31.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
log = { version = "0.4.22", default-features = false }
lite-json = { version = "0.2", default-features = false }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

