[package]
name = "grouprobot"
version = "0.1.0"
edition = "2021"
description = "GroupRobot — TDX+SGX TEE 离链执行程序，与 grouprobot-* Pallet 交互"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server (Webhook + API)
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client (TG/DC API + chain)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ed25519 + X25519 (ECDH key exchange for share encryption)
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"

# SHA256
sha2 = "0.10"

# AES-GCM (sealed storage)
aes-gcm = "0.10"

# Constant-time comparison (prevent timing attacks)
subtle = "2"

# Security (zeroize secrets on drop)
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# Memory hardening (core dump, mlock)
libc = "0.2"

# jemalloc with zero-on-free (堆内存释放后自动清零)
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment
dotenvy = "0.15"

# Hex + Base64
hex = "0.4"
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Regex (BlacklistRule)
regex = "1"

# WebSocket (Discord Gateway)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# URL
url = "2"

# Substrate chain client
subxt = { version = "0.38", features = ["substrate-compat"] }
subxt-signer = { version = "0.38", features = ["sr25519", "subxt"] }
codec = { package = "parity-scale-codec", version = "3.6", features = ["derive"] }
sp-core = { version = "34", default-features = false, features = ["std"] }

# Concurrent state
dashmap = "6"

# Prometheus metrics
prometheus-client = "0.22"

# Async trait
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "grouprobot"
path = "src/main.rs"
