[package]
name = "nexus-runtime"
description = "Nexus blockchain runtime built with Substrate, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
frame-benchmarking = { version = "45.0.0", optional = true, workspace = true }
frame-executive = { version = "45.0.0", workspace = true }
frame-metadata-hash-extension = { version = "0.13.0", workspace = true }
frame-support = { version = "45.0.0", features = ["experimental", "tuples-96"], workspace = true }
frame-system-benchmarking = { version = "45.0.0", optional = true, workspace = true }
frame-system-rpc-runtime-api = { version = "40.0.0", workspace = true }
frame-system = { version = "45.0.0", workspace = true }
frame-try-runtime = { version = "0.51.0", optional = true, workspace = true }
pallet-aura = { version = "44.0.0", workspace = true }
pallet-balances = { version = "46.0.0", workspace = true }
pallet-grandpa = { version = "45.0.0", workspace = true }
pallet-sudo = { version = "45.0.0", workspace = true }
pallet-collective = { version = "45.0.0", workspace = true }
pallet-collective-membership = { workspace = true }
pallet-timestamp = { version = "44.0.0", workspace = true }
pallet-transaction-payment-rpc-runtime-api = { version = "45.0.0", workspace = true }
pallet-transaction-payment = { version = "45.0.0", workspace = true }
# Contracts pallet
pallet-contracts = { version = "45.0.1", workspace = true }
# Trading pallets
pallet-trading-common = { workspace = true }
pallet-nex-market = { workspace = true }
# Escrow, Referral, IPFS pallets
pallet-escrow = { workspace = true }
pallet-storage-service = { workspace = true }
# Evidence pallet
pallet-evidence = { workspace = true }
# Arbitration pallet
pallet-arbitration = { workspace = true }
# Storage lifecycle pallet
pallet-storage-lifecycle = { workspace = true }
# Assets pallet
pallet-assets = { workspace = true }
# Entity pallets (原 ShareMall，已重构)
pallet-entity-common = { workspace = true }
pallet-entity-registry = { workspace = true }
pallet-entity-shop = { workspace = true }
pallet-entity-token = { workspace = true }
pallet-entity-governance = { workspace = true }
pallet-entity-member = { workspace = true }
pallet-commission-common = { workspace = true }
pallet-commission-core = { workspace = true }
pallet-commission-referral = { workspace = true }
pallet-commission-level-diff = { workspace = true }
pallet-commission-single-line = { workspace = true }
pallet-commission-team = { workspace = true }
pallet-entity-commission = { workspace = true }
pallet-entity-service = { workspace = true }
pallet-entity-transaction = { workspace = true }
pallet-entity-market = { workspace = true }
pallet-entity-review = { workspace = true }
pallet-entity-disclosure = { workspace = true }
pallet-entity-kyc = { workspace = true }
pallet-entity-tokensale = { workspace = true }
# GroupRobot pallets
pallet-grouprobot-primitives = { workspace = true }
pallet-grouprobot-registry = { workspace = true, features = ["dcap-verify"] }
pallet-grouprobot-consensus = { workspace = true }
pallet-grouprobot-subscription = { workspace = true }
pallet-grouprobot-rewards = { workspace = true }
pallet-grouprobot-community = { workspace = true }
pallet-grouprobot-ceremony = { workspace = true }
scale-info = { features = ["derive", "serde"], workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
sp-api = { version = "40.0.0", workspace = true }
sp-block-builder = { version = "40.0.0", workspace = true }
sp-consensus-aura = { version = "0.46.0", features = ["serde"], workspace = true }
sp-consensus-grandpa = { version = "27.0.0", features = ["serde"], workspace = true }
sp-core = { version = "39.0.0", features = ["serde"], workspace = true }
sp-genesis-builder = { version = "0.21.0", workspace = true }
sp-inherents = { version = "40.0.0", workspace = true }
sp-keyring = { version = "45.0.0", workspace = true }
sp-offchain = { version = "40.0.0", workspace = true }
sp-runtime = { version = "45.0.0", features = ["serde"], workspace = true }
sp-session = { version = "42.0.0", workspace = true }
sp-storage = { version = "22.0.0", workspace = true }
sp-transaction-pool = { version = "40.0.0", workspace = true }
sp-version = { version = "43.0.0", features = ["serde"], workspace = true }

[build-dependencies]
substrate-wasm-builder = { version = "31.0.0", optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"hex/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-metadata-hash-extension/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-collective/std",
	"pallet-collective-membership/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	# Contracts pallet std
	"pallet-contracts/std",
	# Trading pallets std
	"pallet-trading-common/std",
	"pallet-nex-market/std",
	# Escrow, Referral, IPFS pallets std
	"pallet-escrow/std",
	"pallet-storage-service/std",
	# Evidence pallet std
	"pallet-evidence/std",
	# Arbitration pallet std
	"pallet-arbitration/std",
	# Storage lifecycle pallet std
	"pallet-storage-lifecycle/std",
	# Assets pallet std
	"pallet-assets/std",
	# Entity pallets std
	"pallet-entity-common/std",
	"pallet-entity-registry/std",
	"pallet-entity-shop/std",
	"pallet-entity-token/std",
	"pallet-entity-governance/std",
	"pallet-entity-member/std",
	"pallet-commission-common/std",
	"pallet-commission-core/std",
	"pallet-commission-referral/std",
	"pallet-commission-level-diff/std",
	"pallet-commission-single-line/std",
	"pallet-commission-team/std",
	"pallet-entity-commission/std",
	"pallet-entity-service/std",
	"pallet-entity-transaction/std",
	"pallet-entity-market/std",
	"pallet-entity-review/std",
	"pallet-entity-disclosure/std",
	"pallet-entity-kyc/std",
	"pallet-entity-tokensale/std",
	# GroupRobot pallets std
	"pallet-grouprobot-primitives/std",
	"pallet-grouprobot-registry/std",
	"pallet-grouprobot-consensus/std",
	"pallet-grouprobot-subscription/std",
	"pallet-grouprobot-rewards/std",
	"pallet-grouprobot-community/std",
	"pallet-grouprobot-ceremony/std",
	"scale-info/std",
	"serde_json/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-keyring/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-collective-membership/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	# Contracts pallet benchmarks
	"pallet-contracts/runtime-benchmarks",
	# Trading pallets benchmarks
	"pallet-nex-market/runtime-benchmarks",
	# Escrow, Referral pallets benchmarks
	# Evidence pallet benchmarks
	"pallet-evidence/runtime-benchmarks",
	# Arbitration pallet benchmarks
	"pallet-arbitration/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-collective-membership/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	# Contracts pallet try-runtime
	"pallet-contracts/try-runtime",
	# Trading pallets try-runtime
	"pallet-nex-market/try-runtime",
	# Escrow, Referral pallets try-runtime
	# Evidence pallet try-runtime
	"pallet-evidence/try-runtime",
	# Arbitration pallet try-runtime
	# Note: pallet-arbitration does not have try-runtime feature
	"sp-runtime/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]
