[package]
name = "pallet-inscription"
version = "0.1.0"
description = "Genesis inscription pallet - immutable on-chain inscription stored at Block 0"
authors = ["Nexus Team"]
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/nexus-blockchain/nexus.git"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "serde/std",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]
