[package]
name = "pallet-ads-grouprobot"
version = "0.1.0"
authors = ["Nexus Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/memoio/nexus"
description = "Ads GroupRobot Adapter — TEE 投放验证 + 节点奖励 + 质押 audience_cap + 反作弊"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
log = { workspace = true }
pallet-ads-primitives = { path = "../primitives", default-features = false }
pallet-ads-core = { path = "../core", default-features = false }
pallet-grouprobot-primitives = { path = "../../grouprobot/primitives", default-features = false }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true, default-features = false }

[dev-dependencies]
sp-io = { workspace = true }
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"log/std",
	"pallet-ads-primitives/std",
	"pallet-ads-core/std",
	"pallet-grouprobot-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-io/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"sp-runtime/try-runtime",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
